# chronos

./: .dockerignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: airflow.cfg  elasticmq.conf
plugins/: dcmp
plugins/ergo/: __init__.py  alembic.ini  models.py  plugin.py
plugins/ergo/dags/: dag_job_collector.py  dag_task_queuer.py
plugins/ergo/migrations/: env.py
plugins/ergo/migrations/versions/: 4578b3944533_added_ergo_task_and_job_models.py  fdba002dd748_added_job_metadata.py
plugins/ergo/operators/: task_producer.py
plugins/ergo/operators/sqs/: result_from_messages.py  sqs_task_pusher.py
plugins/ergo/sensors/: job_result_sensor.py  task_requests_batcher.py
plugins/ergo/tools/: upgradedb.py
scripts/: entrypoint.sh
src/dags/: ExampleSqsDag.py  dag_ergo.py  dag_ergo_task_queuer.py
